# infrastructure_for_data_engineer_virtual_environments

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
